docs: trim api
